# swagger.json
@@ -28,7 +28,8 @@
         {"name": "Establishments"},
         {"name": "Diagnostics"},
         {"name": "Symptoms"},
-        {"name": "Diseases"}
+        {"name": "Diseases"},
+        {"name": "Incidences"}
     ],
     "host": "predimed-node.herokuapp.com",
     "basePath": "/api/v1",
@@ -71,6 +72,7 @@
                 "consumes": ["application/json"],
                 "parameters": [
                     {
+                      "name": "register",
                       "in":"body",
                       "schema":{
                           "$ref":"#/definitions/registerReq"
@@ -813,6 +815,151 @@
             }
         },
 
+        "/incidences" : {
+          "post" : {
+              "tags": ["Incidences"],
+              "consumes": ["application/json"],
+              "produces": ["application/json"],
+              "security": [{ "Bearer": [] }],
+              "parameters": [
+                  {
+                      "name": "addIncidence",
+                      "in":"body",
+                      "schema": {
+                          "$ref": "#/definitions/addIncidenceReq"
+                      }
+                  }
+              ],
+              "responses": {
+                  "200": {
+                      "description": "successful operation",
+                      "schema": {
+                          "type": "array",
+                          "items": {
+                              "$ref": "#/definitions/defaultResponse"
+                          }
+                      }
+                  },
+                  "400": {
+                      "description": "Invalid status value",
+                      "schema": {
+                          "$ref": "#/definitions/InvalidResponse"
+                      }
+                  }
+              }
+          },
+          "get": {
+              "tags": ["Incidences"],
+              "produces": ["application/json"],
+              "security": [{ "Bearer": [] }],
+              "parameters": [
+                  {
+                  "name": "docMedic",
+                  "in": "query",
+                  "required": false,
+                  "type": "string"
+                  }
+              ],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                      "type": "array",
+                      "items": {
+                          "$ref": "#/definitions/incidenceRes"
+                      }
+                  }
+                },
+                "400": {
+                  "description": "Invalid status value",
+                  "schema": {
+                      "$ref": "#/definitions/InvalidResponse"
+                  }
+              }
+              }
+            }
+      },
+      "/incidences/{id}": {
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "integer"
+            }
+          ],
+          "delete": {
+            "tags": [
+              "Incidences"
+            ],
+            "security": [{ "Bearer": [] }],
+            "responses": {
+              "200": {
+                "description": "successful operation",
+                "schema": {
+                  "$ref": "#/definitions/defaultResponse"
+                }
+              },
+              "400": {
+                  "description": "Invalid status value",
+                  "schema": {
+                      "$ref": "#/definitions/InvalidResponse"
+                  }
+              }
+            }
+          },
+          "get": {
+              "tags": [
+                "Incidences"
+              ],
+              "security": [{ "Bearer": [] }],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                    "$ref": "#/definitions/incidenceRes"
+                  }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+              }
+            },
+          "put": {
+            "tags": [
+              "Incidences"
+            ],
+            "description": "El formato de la fecha de la solucion debe seguir la siguiente estructura 2022-04-10T02:13:17.000Z",
+            "security": [{ "Bearer": [] }],
+            "parameters": [
+              {
+                "name": "updateIncidence",
+                "in": "body",
+                "schema": {
+                  "$ref": "#/definitions/updateIncidenceReq"
+                }
+              }
+            ],
+            "responses": {
+              "200": {
+                "description": "successful operation",
+                "schema": {
+                  "$ref": "#/definitions/defaultResponse"
+                }
+              },
+              "400": {
+                  "description": "Invalid status value",
+                  "schema": {
+                      "$ref": "#/definitions/InvalidResponse"
+                  }
+              }
+            }
+          }
+      },
+
         "/departments": {
             "get": {
                 "parameters": [
@@ -1133,6 +1280,34 @@
                 "isAdmin":{"type":"boolean"}
             }
         },
+        "addIncidenceReq": {
+          "type": "object",
+          "properties": {
+              "establishmentId": {"type":"integer"},
+              "status": {"type":"string"},
+              "topic": {"type":"string"},
+              "phone": {"type":"string"},
+              "description":{"type":"string"},
+              "registerType":{"type":"string"},
+              "priority":{"type":"string"},
+              "userId":{"type":"integer"}
+          }
+      },
+      "updateIncidenceReq": {
+        "type": "object",
+        "properties": {
+            "establishmentId": {"type":"integer"},
+            "status": {"type":"string"},
+            "topic": {"type":"string"},
+            "phone": {"type":"string"},
+            "description":{"type":"string"},
+            "registerType":{"type":"string"},
+            "priority":{"type":"string"},
+            "userId":{"type":"integer"},
+            "solutionDetail":{"type":"string"},
+            "dateSolution":{"type":"string"}
+        }
+    },
         "diagnosticConsultReq":{
             "properties": {
              "symptoms": {
@@ -1229,6 +1404,21 @@
                 "created_at": {"type":"string"},
                 "updated_at": {"type":"string"}
             }
+        },
+        "incidenceRes": {
+          "type": "object",
+          "properties": {
+              "establishmentId": {"type":"integer"},
+              "status": {"type":"string"},
+              "topic": {"type":"string"},
+              "phone": {"type":"string"},
+              "description":{"type":"string"},
+              "registerType":{"type":"string"},
+              "priority":{"type":"string"},
+              "userId":{"type":"integer"},
+              "solutionDetail":{"type":"string"},
+              "dateSolution":{"type":"string"}
+          }
         },
         "patientRes": {
             "type": "object",
